doc -> doc swagger, read one user ID
